@@ -35,7 +35,7 @@
 # include "getopts.h"
 
 # ifndef POCC_RELEASE_MODE
-#  define POCC_NB_OPTS				86
+#  define POCC_NB_OPTS				88
 # else
 #  define POCC_NB_OPTS				68
 # endif
@@ -135,12 +135,14 @@
 #  define POCC_OPT_PONOS_COEF_ARE_POS	        78
 #  define POCC_OPT_PONOS_BUILD_2DP1	        79
 #  define POCC_OPT_PONOS_SOLVER_TYPE	        80
-#  define POCC_OPT_PONOS_MAXSCALE_SOLVER	81
-#  define POCC_OPT_PONOS_NOREDUNDANCY_SOLVER	82
-#  define POCC_OPT_PONOS_LEGALITY_CONSTANT_K	83
-#  define POCC_OPT_PONOS_SCHED_COEF_BOUND	84
+#  define POCC_OPT_PONOS_SOLVER_PRECOND	        81
+#  define POCC_OPT_PONOS_MAXSCALE_SOLVER	82
+#  define POCC_OPT_PONOS_NOREDUNDANCY_SOLVER	83
+#  define POCC_OPT_PONOS_LEGALITY_CONSTANT_K	84
+#  define POCC_OPT_PONOS_SCHED_COEF_BOUND	85
+#  define POCC_OPT_PONOS_OBJECTIVE		86
 
-#  define POCC_OPT_PAST_SUPER_OPT_LOOP_BOUND	85
+#  define POCC_OPT_PAST_SUPER_OPT_LOOP_BOUND	87
 
 
 # else
